--- a/index.html
+++ b/index.html
@@ -1,83 +1,89 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
-  <title>Simple AR Camera</title>
-  <style>
-    html,body {margin:0;padding:0;overflow:hidden;background:#000;}
-    #wrapper       {position:relative;width:100vw;height:100vh;}
-    video          {position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;}
-    #frame         {position:absolute;top:0;left:0;width:100%;height:100%;pointer-events:none;}
-    #controls      {position:absolute;bottom:20px;left:50%;transform:translateX(-50%);
-                    display:flex;gap:12px;}
-    button         {font-size:16px;padding:10px 18px;border:none;border-radius:8px;
-                    background:#fff;opacity:.9;}
-  </style>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
+<title>Simple AR Cam</title>
+<style>
+  html,body{margin:0;padding:0;overflow:hidden;background:#000;font-family:sans-serif}
+  #wrap{position:relative;width:100vw;height:100dvh}
+  video,#frame,#result{position:absolute;inset:0;width:100%;height:100%;object-fit:cover}
+  #frame{pointer-events:none;display:none}      /* 認可後にだけ表示 */
+  #result{display:none}                         /* 撮影後に表示 */
+  #ui{position:fixed;bottom:calc(env(safe-area-inset-bottom)+20px);width:100%;
+      display:flex;justify-content:center;gap:14px;z-index:10}
+  button{padding:12px 20px;border:none;border-radius:10px;font-size:16px;background:#fff;opacity:.9}
+</style>
 </head>
 <body>
-  <div id="wrapper">
-    <video id="video" playsinline muted></video>
-    <img id="frame" src="frame.png" alt="frame">
-    <div id="controls">
-      <button id="startBtn">カメラ開始</button>
-      <button id="shotBtn"  style="display:none;">撮影</button>
-    </div>
-    <!-- オフスクリーン描画用 -->
-    <canvas id="canvas" style="display:none;"></canvas>
-  </div>
 
-  <script>
-  const video   = document.getElementById('video');
-  const frame   = document.getElementById('frame');
-  const canvas  = document.getElementById('canvas');
-  const startBtn= document.getElementById('startBtn');
-  const shotBtn = document.getElementById('shotBtn');
+<div id="wrap">
+  <video id="video" playsinline muted></video>
+  <img  id="frame"  src="frame.png" alt="">
+  <img  id="result" src=""          alt="captured">
+</div>
 
-  let stream = null;
+<div id="ui">
+  <button id="start">カメラ許可</button>
+  <button id="switch" style="display:none;">自撮り⇔背面</button>
+  <button id="shot"   style="display:none;">撮影</button>
+  <button id="retry"  style="display:none;">再撮影</button>
+</div>
 
-  // 1️⃣ カメラ起動（ユーザー操作必須：iOS の制約）
-  startBtn.addEventListener('click', async () => {
-    try {
-      stream = await navigator.mediaDevices.getUserMedia({
-        video: { facingMode: 'environment' },  // 背面カメラ優先
-        audio: false
-      });
-      video.srcObject = stream;
-      await video.play();
-      startBtn.style.display = 'none';
-      shotBtn.style.display  = 'inline-block';
-    } catch(e){
-      alert('カメラにアクセスできませんでした: ' + e.message);
-    }
-  });
+<canvas id="cvs" style="display:none;"></canvas>
 
-  // 2️⃣ 撮影 → 画像保存
-  shotBtn.addEventListener('click', () => {
-    const w = video.videoWidth;
-    const h = video.videoHeight;
+<script>
+const $ = id => document.getElementById(id);
+let stream, facing = 'environment';
 
-    // Canvas を動画サイズに合わせて描画
-    canvas.width  = w;
-    canvas.height = h;
-    const ctx = canvas.getContext('2d');
-    ctx.drawImage(video, 0, 0, w, h);          // 背景: カメラ映像
-    ctx.drawImage(frame, 0, 0, w, h);          // 前景: PNG フレーム
+async function openCam(){
+  if(stream) stream.getTracks().forEach(t=>t.stop());
+  stream = await navigator.mediaDevices.getUserMedia({
+    video:{facingMode:{exact:facing}}, audio:false
+  }).catch(()=>navigator.mediaDevices.getUserMedia({video:true,audio:false}));
+  $('video').srcObject = stream;
+  await $('video').play();
+}
 
-    canvas.toBlob(blob => {
-      const url = URL.createObjectURL(blob);
-      const link = document.createElement('a');
-      link.href = url;
-      link.download = 'photo.png';             // 端末の写真フォルダに保存
-      link.click();
-      URL.revokeObjectURL(url);
-    }, 'image/png');
-  });
+$('start').onclick = async ()=>{
+  await openCam();                 // 許可ポップアップ→OK でここを抜ける
+  // UI 切り替え
+  $('start').style.display='none';
+  $('switch').style.display='inline-block';
+  $('shot').style.display  ='inline-block';
+  $('frame').style.display ='block';   // ここでフレームを初めて表示
+};
 
-  // 3️⃣ ページ離脱時はカメラ停止（バッテリー節約）
-  window.addEventListener('beforeunload', () => {
-    stream?.getTracks().forEach(t => t.stop());
-  });
-  </script>
+$('switch').onclick = async ()=>{
+  facing = (facing==='environment')?'user':'environment';
+  await openCam();
+};
+
+$('shot').onclick = ()=>{
+  const v=$('video'), c=$('cvs');
+  c.width=v.videoWidth; c.height=v.videoHeight;
+  const ctx=c.getContext('2d');
+  ctx.drawImage(v,0,0,c.width,c.height);
+  ctx.drawImage($('frame'),0,0,c.width,c.height);
+  $('result').src=c.toDataURL('image/png');
+  // 画面切替
+  $('video').style.display='none';
+  $('frame').style.display='none';
+  $('result').style.display='block';
+  $('shot').style.display='none';
+  $('retry').style.display='inline-block';
+  // iOS: 長押しで保存できるよう <img> を表示している
+};
+
+$('retry').onclick = ()=>{
+  $('result').style.display='none';
+  $('video').style.display ='block';
+  $('frame').style.display ='block';
+  $('shot').style.display  ='inline-block';
+  $('retry').style.display ='none';
+};
+
+window.addEventListener('beforeunload',()=>stream?.getTracks().forEach(t=>t.stop()));
+</script>
 </body>
 </html>
